# raymarching_voxels

./: Cargo.toml  LICENSE  README.md  build.rs
data/: Contour_LUT_Generation.nb  bunny.svdag  teapot.svdag  teflon-16-16-128-32.brdf  tri.svdag
data/dag/: bunny.svdag  gyroid.svdag  sibenik_mats.mats  sibenik_mats.svdag  slant.svdag  sponza_mats.mats  sponza_tex.mats  tri.svdag
src/: command_buffer.rs  dbuffer.rs  descriptor_sets.rs  gbuffer.rs  main.rs  noise.rs  pipelines.rs  shaders.rs  timing.rs  vox.rs
src/brdf/: matusik.rs  mod.rs
src/shaders/: accumulate.comp  apply_texture.comp  atrous.comp  brdf.glsl  denoise.comp  geom.comp  intersect.comp  light_bounce.comp  light_combine.comp  light_occlude.comp  lighting.comp  march.comp  mod.rs  normal_blend.comp  postprocess.comp  pre_trace.comp  ray_test.comp  raycast.comp  render.comp  reproject.comp  sample_decay.comp  stratified_sample.comp  taa.comp  types.comp  update.comp  voxel.comp  voxel.glsl  voxel_cache_update.comp  voxel_raycast.comp
src/shaders/path/: path_bounce.comp  path_light.comp  path_occlude.comp
src/vox/: csg.rs  mod.rs  raycast.rs  tests.rs  voxelize.rs
