[package]
name = "voxel_renderer"
version = "0.1.0"
authors = ["sunbl"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22"
log = "0.4"
winit_input_helper = "0.6"
env_logger = "0.7.1"
vulkano = {git = "https://github.com/vulkano-rs/vulkano"}
vulkano-shaders = {git = "https://github.com/vulkano-rs/vulkano"}
vulkano-win = {git = "https://github.com/vulkano-rs/vulkano"}
rand = "0.7.3"
opensimplex = "0.2.0"
cgmath = "0.17.0"
crossterm = "0.17.4"
png = "0.16.3"
serde = {version = "1.0.110", features = ["derive"]}
serde_json = "1.0.53"
bincode = "1.2.1"